<resources>
    <string name="app_name">FireBaseStudyProject</string>
    <string name="content_desc">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="lbl_don_t_have_Account">Don\'t have an account?</string>
    <string name="lbl_register"><u>Register</u></string>
    <string name="lbl_btn_register">Register</string>
    <string name="lbl_create_account">Create an Account</string>
    <string name="et_first_name">First Name</string>
    <string name="et_last_name">Last Name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="lbl_txt_terms_condition">I Agree To The</string>
    <string name="lbl_terms_contion"><u><![CDATA[Terms & Condition]]></u></string>
    <string name="lbl_already_account">Already have an account?</string>
    <string name="lbl_login_underline"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please Enter First Name</string>
    <string name="err_msg_enter_last_name">Please Enter Last Name</string>
    <string name="err_msg_enter_email">Please enter EmailID</string>
    <string name="err_msg_enter_password">Please Enter Password</string>
    <string name="err_msg_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and Confirm Password Not Matched</string>
    <string name="err_msg_agree_terms_and_condition"><![CDATA[Please Select Terms & Conditions]]></string>
    <string name="lbl_please_wait">Please wait</string>
    <string name="enter_your_forgot_text">Enter Your Email or Username we\'ll\nsend you a email to reset password</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_Male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_double_tap_exit">Please Click again to exit the app.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_info">Info</string>
    <string name="lbl_Camera">Camera</string>
    <string name="lbl_Gallery">Gallery</string>
    <string name="lbl_cancel">cancel</string>
    <string name="lbl_ok">OK</string>
    <string name="permission_denied_message">Permission Denied</string>
    <string name="err_msg_enter_mobile">Please Enter Mobile Number</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_prodcut">Products</string>
    <string name="title_orders">Orders</string>
    <string name="title_Settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="btn_lbl_logout">LOgOut</string>
    <string name="lbl_addresses">Address</string>
    <string name="title_profile_completed">Profile Completed</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="action_add_products">Add Product</string>
    <string name="lbl_add_product">Add Product</string>
    <string name="et_product_title">Product Title</string>
    <string name="et_product_price">Product Price</string>
    <string name="et_product_Quantity">Product Quantity</string>
    <string name="err_product_title">Please Enter Product Title</string>
    <string name="err_image_select">Please Selecet Product Image</string>
    <string name="err_product_price">Please Enter Product Price</string>
    <string name="err_product_desc">Please Enter Product Description</string>
    <string name="err_product_quantity">Please Enter product Quantity</string>
    <string name="et_product_desc">Product Description</string>
    <string name="lbl_no_product">NO PRODUCT AVAILABLE</string>
    <string name="lbl_no_dashboard_item">No DashBoard Item Available</string>
    <string name="delete_product_msg">Are u sure you want to delete the product?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_delete">DELETE</string>
    <string name="lbl_product_details">Product Details</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_stock_quantity">Stock Quantity</string>
    <string name="lbl_Add_to_cart">ADD TO CART</string>
    <string name="default_notification_channel_id">fcm-default_channel</string>
    <string name="default_channel_name">Topic</string>
    <string name="lbl_subscribe">Subscribe</string>
    <string name="lbl_log_token">Log Token</string>
    <string name="msg_token_fmt">Message Token</string>
    <string name="msg_subscribed">Notification Subscribed</string>
    <string name="msg_failed">SUBSCRIBTION FAILED</string>
    <string name="fcm_message">FCM MESSAGE</string>

</resources>