<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListner"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.dashboard.ui.dashboard.DashboardFragment">


        <TextView
            android:id="@+id/txtNoDashBoardITemFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/lbl_no_dashboard_item"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDashBoardItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/btnSubscribe"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            tools:listitem="@layout/raw_dashboard_item_layout" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/btnSubscribe"
            android:onClick="@{clickListner::onClick}"
            android:text="@string/lbl_subscribe"
            app:layout_constraintEnd_toStartOf="@id/btnLogToke"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/btnLogToke"
            android:onClick="@{clickListner::onClick}"

            android:text="@string/lbl_log_token"
            app:layout_constraintStart_toEndOf="@id/btnSubscribe"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>